fix z-index

--- a/art/main.css
+++ b/art/main.css
@@ -87,7 +87,6 @@ h2 {
 #container {
 	width: 90%;
 	margin: auto;
-	z-index: 1 !important;
 	}
 
 .listing {
@@ -98,7 +97,6 @@ h2 {
 	border: 1px solid lightgray;
 	border-radius: 5px 5px;
 	margin: 5px;
-	z-index: 1 !important;
 	}	
 
 .listing img {
